# W1z4rDV1510n

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  STATE.md  UPGRADE_ROADMAP.txt  node_config.json  node_config_example.json  node_config_local.json  node_config_node3.json  run_config.json  run_config_chem.json  run_config_chem_classical.json  run_config_chess_live.json  run_config_chess_ply_classical.json  run_config_chess_ply_neuro.json  run_config_chess_ply_quantum.json  run_config_exoplanet.json  run_config_genomic.json  run_config_qa_classical.json  run_config_qa_neuro.json  run_config_quantum_chess.json  run_config_quantum_chess_tuned.json  run_config_streaming_ocr.json  run_config_tox21.json  supervisor.toml  supervisor.toml.example
.claude/: settings.local.json
brains/: coding_debug.deployment.toml  coding_debug.identity.toml  coding_small.deployment.toml  coding_small.identity.toml  market_django.deployment.toml  market_small.deployment.toml  market_small.identity.toml
chain/: bridge_contract.json  genesis.json  reward_contract.json  token_standard.json
config/: cron_profile.json
crates/brain/: Cargo.toml
crates/brain/examples/: inspect_snapshot.rs  lab.rs
crates/brain/src/: action.rs  annealer.rs  brain.rs  code_repair.rs  crystallizer.rs  eem.rs  fabric.rs  grounding.rs  identity.rs  lib.rs  network.rs  neuron.rs  persistence.rs  pool.rs  streaming_migration.rs  tier_orchestrator.rs  wbrain_metadata.rs  workspace.rs
crates/brain/src/store/: bloom.rs  cold.rs  container.rs  control.rs  event.rs  merkle.rs  mod.rs  neuron_store.rs  posting_index.rs  recovery.rs  wal.rs  wbrain_store.rs
crates/brain/tests/: action_loop.rs  annealer.rs  answer_contract.rs  atom_grounded_pretrain.rs  binding_concept_fingerprint.rs  binding_concepts.rs  bloom_sidecar.rs  cluster_primitives.rs  code_repair_composition.rs  code_structure_encoding.rs  cold_persistence.rs  cold_tier_pool.rs  concept_tier_oov.rs  critical_thinking.rs  cross_pool_wiring.rs  dynamic_emergence.rs  eem.rs  eviction_pass.rs  exact_feature_ambiguity.rs  feature_binding_composition.rs  identity.rs  instruction_intent_encoding.rs  logical_workspace.rs  merkle_pool.rs  multi_fact.rs  multi_pool_binding_readout.rs  network.rs  persistence.rs  position_aware_binding.rs  prediction_concepts.rs  replay_free_energy.rs  replay_salience.rs  resonance.rs  salience.rs  semantic_crystallizer.rs  sequential_concept_wiring.rs  sleep_cycle.rs  sleep_decomposed.rs  tier_orchestrator.rs  tiered_pool_eviction.rs  (+3 more)
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs  membership.rs  node.rs  otp.rs  protocol.rs  ring.rs  transport.rs
crates/core/: Cargo.toml
crates/core/benches/: ram_vs_gpu.rs
crates/core/src/: annealing.rs  blockchain.rs  branching.rs  bridge.rs  calibration.rs  causal.rs  compute.rs  config.rs  consistency.rs  energy.rs  hardware.rs  lib.rs  logging.rs  main.rs  math_toolbox.rs  ml.rs  network.rs  neuro.rs  objective.rs  orchestrator.rs  planner.rs  plasticity.rs  proposal.rs  quantum.rs  quantum_calibration.rs  quantum_executor.rs  resource.rs  schema.rs  search.rs  service.rs  service_api.rs  service_storage.rs  spike.rs  state_population.rs  system.rs  telemetry.rs  tensor.rs
crates/core/src/streaming/: align.rs  analysis_runtime.rs  appearance.rs  audio_bits.rs  behavior.rs  branching_runtime.rs  causal_stream.rs  chaos_model.rs  cross_modal.rs  delta_engine.rs  dimensions.rs  dynamic_pools.rs  entity_health.rs  equation_matrix.rs  experiment_governor.rs  fabric.rs  fabric_trainer.rs  flow.rs  health_overlay.rs  hierarchical_motifs.rs  hypergraph.rs  image_bits.rs  ingest.rs  keyboard_bits.rs  knowledge.rs  knowledge_ingest.rs  labeling.rs  layered_physiology.rs  metacognition_runtime.rs  mod.rs  motif_label_bridge.rs  motif_playback.rs  motion_bits.rs  motor.rs  narrative_runtime.rs  network_fabric.rs  neuro_bridge.rs  ocr_runtime.rs  ontology_runtime.rs  organic_encoder.rs  (+25 more)
crates/core/src/threat/: consensus.rs  field.rs  health.rs  intent.rs  mod.rs  overlay.rs  propagation.rs  subradian.rs
crates/core/tests/: multi_pool_integration.rs  two_pool_integration.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/node/: Cargo.toml
crates/node/src/: api.rs  brain_api.rs  bridge.rs  chain.rs  config.rs  data_mesh.rs  distributed.rs  gui.rs  identity.rs  label_queue.rs  ledger.rs  main.rs  mesh_gen.rs  p2p.rs  paths.rs  performance.rs  runtime.rs  sim.rs  wallet.rs
crates/node/src/openstack/: control_plane.rs  mod.rs  services.rs
data/: logging_snapshot.json  relational_priors.json  synthetic_dataset_metadata.json  synthetic_run_config.json  synthetic_snapshot.json  timeline_test.jsonl
docs/: BRAIN_CONFIGURATION_FIELD_GUIDE.md  PROGRAMMING_BRAIN_REPRODUCTION.md  TRANSIENT_COMPOSITION_EXPERIMENT.md  WBRAIN_SCOPED_PAGING_AUDIT.md  island_validation.md
logs/: latest_run.json  logging_smoke.jsonl  logging_smoke_results.json
schemas/: bridge_intent_schema.json
scripts/: add_av_exclusion.ps1  boost_failing.py  boost_water_sleep.py  brain_dense_burst_toddler.py  brain_dense_burst_toddler_categorical.py  brain_fluency_eval.py  brain_per_prompt_diag.py  brain_text_chat_test.py  brain_toddler_with_categorical.py  brain_xpool_chat_test.py  build_bible_corpus.py  build_biodiversity_corpus.py  build_class_corpus.py  build_code_corpus.py  build_cognitive_corpus.py  build_communication_corpus.py  build_concept_dataset.py  build_cow_dataset.py  build_foreign_language_corpus.py  build_foundational_seeds.py  build_language_corpus.py  build_library_corpus.py  build_libretexts_corpus.py  build_math_corpus.py  build_medical_corpus.py  build_misspellings_corpus.py  build_pedagogy_corpus.py  build_relational_priors.py  build_stem_dataset.py  cell_viewer.html  chat.py  check_node.cmd  chess_prediction_runner.py  chess_training_loop.py  cow_sensor_stream.py  e2e_smoke.py  eval_uspto_batch.py  export_chess_stack_snapshot.py  export_sequence_snapshot.py  export_uspto_snapshot.py  (+161 more)
src/: annealing.rs  calibration.rs  config.rs  energy.rs  hardware.rs  lib.rs  ml.rs  (+9 more)
(+115 files in other folders)
