[package]
name = "simfutures"
version = "0.1.0"
edition = "2024"

[lib]
name = "simfutures"
path = "src/lib.rs"

[[bin]]
name = "predict_state"
path = "src/main.rs"

[[bin]]
name = "calibrate_energy"
path = "src/bin/calibrate_energy.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
rayon = "1.10"
