[package]
name = "w1z4rd-brain"
version = "0.1.0"
edition = "2024"
description = "Brain construction kit — the substrate per ARCHITECTURE.md. Replaces crates/core's neural fabric over time."

[lib]
name = "w1z4rd_brain"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"        # ControlMode env-var parsing (dynamical-GA wiring)
bincode = "1.3"           # binary serialization per spec §8
parking_lot = "0.12"
dashmap = "6.0"           # per-pool RwLock concurrency per spec §8
rayon = "1.10"            # pool-parallel propagation per spec §8
thiserror = "1.0"
ahash = { version = "0.8", features = ["serde"] }  # faster hashing + serde derive support
base64 = "0.22"           # raw-bit atom transport encoding (spec §1.1)
evalexpr = "11"           # MIT — EEM equation evaluator per spec §8
toml = "0.8"              # MIT — BrainIdentitySpec serializer per spec §3.3
tracing = "0.1"           # MIT — WAL diagnostics per spec §17
blake3 = "1"              # CC0/Apache-2.0 — per-pool Merkle root per spec §17.6

[dev-dependencies]
# nothing yet — built-in #[test] is enough for the integration test.
