[package]
name = "w1z4rdv1510n-cluster"
version = "0.1.0"
edition = "2024"
description = "Distributed cluster layer for the W1z4rD neural fabric"

[dependencies]
anyhow       = "1.0"
argon2       = "0.5"
blake2       = "0.10"
rand         = "0.8"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokio        = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal"] }
tracing      = "0.1"
uuid         = { version = "1.8", features = ["v4", "serde"] }
dashmap      = "5.5"
