[package]
name = "w1z4rdv1510n"
version = "0.1.0"
edition = "2024"

[lib]
name = "w1z4rdv1510n"
path = "src/lib.rs"

[[bin]]
name = "predict_state"
path = "src/main.rs"

[[bin]]
name = "calibrate_energy"
path = "src/bin/calibrate_energy.rs"

[[bin]]
name = "service"
path = "src/bin/service.rs"

[features]
default = []
experimental-hw = []
gpu = ["wgpu", "pollster", "bytemuck"]
distributed = []

[dependencies]
num_cpus = "1.16"
sysinfo = "0.30"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
rayon = "1.10"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
blake2 = "0.10"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
cfg-if = "1.0"
quick-xml = "0.31"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Security"
] }
futures = "0.3"
chess = "3.2"
bytemuck = { version = "1.15", optional = true, features = ["derive"] }
wgpu = { version = "0.20", optional = true, features = ["wgsl"] }
pollster = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

