[package]
name    = "w1z4rd-dashboard"
version = "0.1.0"
edition = "2024"
description = "W1z4rD desktop dashboard — GUI front-end for the node API"

[[bin]]
name = "w1z4rd-dashboard"
path = "src/main.rs"

[dependencies]
anyhow     = "1.0"
eframe     = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui       = "0.29"
reqwest    = { version = "0.12", features = ["json", "blocking"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
