[package]
name = "w1z4rdv1510n-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
argon2 = "0.5"
futures = "0.3"
libp2p = { version = "0.53", features = ["tokio", "tcp", "dns", "noise", "yamux", "gossipsub", "identify", "kad", "mdns", "macros"] }
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
w1z4rdv1510n = { path = "../core" }
