[package]
name = "w1z4rdv1510n-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
blake2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
argon2 = "0.5"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
futures = "0.3"
libp2p = { version = "0.53", features = ["tokio", "tcp", "dns", "noise", "yamux", "gossipsub", "identify", "kad", "mdns", "macros", "relay", "autonat", "quic"] }
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
w1z4rdv1510n = { path = "../core" }
void = "1.0"

[dev-dependencies]
tempfile = "3.10"
